Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,4 @@ steps:
     azureSubscription: 'Azure Pass - Sponsorship'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
-    inlineScript: 'az show account'
+    inlineScript: 'az account show'
